--- a/Source/src/main/webapp/views/user/login.html
+++ b/Source/src/main/webapp/views/user/login.html
@@ -1,10 +1,12 @@
-<!DOCTYPE html>
-<html>
-<head lang="en">
-    <meta charset="UTF-8">
-    <title></title>
-</head>
-<body>
 
-</body>
-</html>
+<h1>{{ pageTitle }}</h1>
+<div>
+    <form>
+        <div class="form-group">
+            <label for="email">Email address</label>
+            <input type="email" class="form-control" placeholder="Enter email">
+        </div>
+
+        <button type="submit" class="btn btn-default">Login</button>
+    </form>
+</div>
