--- a/Source/src/main/webapp/views/user/profile.html
+++ b/Source/src/main/webapp/views/user/profile.html
@@ -1,10 +1,102 @@
-<!DOCTYPE html>
-<html>
-<head lang="en">
-    <meta charset="UTF-8">
-    <title></title>
-</head>
-<body>
 
-</body>
-</html>
+<!-- Requirements
+•	First name
+•	Middle initial
+•	Last name (required)
+•	Home Street Address (required)
+•	Home City, State, Postal Code, Country (required)
+•	Primary Phone Number (required)
+•	Secondary Phone Number (optional)
+•	FAX number (optional)
+•	Primary Email Address (required)
+•	Secondary Email Address (optional)
+•	Company Name (required)
+•	Branch Office/Location (optional)
+•	Additional Text Info (optional)
+
+-->
+
+<div>
+    <form ng-submit="updateProfile()>
+        <div class="form-group">
+            <label for="email">Email address</label>
+            <input type="email" class="form-control" id="email" placeholder="Enter email" required/>
+        </div>
+
+        <div class="form-group">
+            <label for="firstName">Name</label>
+            <input type="text" class="form-control" id="firstName" placeholder="First name" required/>
+        </div>
+
+        <div class="form-group">
+            <input type="text" class="form-control" id="middleInitial" placeholder="M.I." required/>
+        </div>
+
+        <div class="form-group">
+            <input type="text" class="form-control" id="lastName" placeholder="Last name" required/>
+        </div>
+
+        <div class="form-group">
+            <label for="homeAddress">Home address</label>
+            <input type="text" class="form-control" id="homeaddress" placeholder="Enter address" required/>
+        </div>
+
+        <div class="form-group">
+            <label for="city">City</label>
+            <input type="text" class="form-control" id="city" placeholder="Enter city" required/>
+        </div>
+
+        <div class="form-group">
+            <label for="state">State</label>
+            <input type="text" class="form-control" id="state" placeholder="Enter state" required/>
+        </div>
+
+        <div class="form-group">
+            <label for="state">State</label>
+            <input type="text" class="form-control" id="city" placeholder="Enter state" required/>
+        </div>
+
+        <div class="form-group">
+            <label for="zip">Zip</label>
+            <input type="text" class="form-control" id="zip" placeholder="Enter zip code" required/>
+        </div>
+
+        <div class="form-group">
+            <label for="country">Country</label>
+            <input type="text" class="form-control" id="country" placeholder="Enter count" required/>
+        </div>
+
+        <div class="form-group">
+            <label for="primaryPhone">Primary Phone Number</label>
+            <input type="text" class="form-control" id="primaryPhone" placeholder="###-###-####" required/>
+        </div>
+
+        <div class="form-group">
+            <label for="secondaryPhone">Secondary Phone Number (optional)</label>
+            <input type="text" class="form-control" id="secondaryPhone" placeholder="###-###-####"/>
+        </div>
+
+        <div class="form-group">
+            <label for="fax">Fax Number (optional)</label>
+            <input type="text" class="form-control" id="fax" placeholder="###-###-####"/>
+        </div>
+
+        <div class="form-group">
+            <label for="company">Company</label>
+            <input type="text" class="form-control" id="company" placeholder="Enter company name" required/>
+        </div>
+
+        <div class="form-group">
+            <label for="branch">Branch/Office Location (optional)</label>
+            <input type="text" class="form-control" id="branch" placeholder="Enter branch or location"/>
+        </div>
+
+        <div class="form-group">
+            <label for="notes">Additional information (optional)</label>
+            <input type="text" class="form-control" id="notes" placeholder="Enter any additional information"/>
+        </div>
+
+        <button type="submit" class="btn btn-default">Submit</button>
+    </form>
+</div>
+
