--- a/Source/src/main/webapp/views/user/profile.html
+++ b/Source/src/main/webapp/views/user/profile.html
@@ -1,4 +1,4 @@
-
+`````````````````````````````````````````````````````````````
 <!-- Requirements
 •	First name
 •	Middle initial
@@ -17,86 +17,82 @@
 -->
 
 <div>
-    <form ng-submit="updateProfile()>
+    <form ng-submit="updateProfile()">
         <div class="form-group">
             <label for="email">Email address</label>
-            <input type="email" class="form-control" id="email" placeholder="Enter email" required/>
+            <input type="email" class="form-control" id="email" placeholder="user.email || Email" required {{user.emailReadOnly}}/>
         </div>
 
         <div class="form-group">
             <label for="firstName">Name</label>
-            <input type="text" class="form-control" id="firstName" placeholder="First name" required/>
+            <input type="text" class="form-control" id="firstName" placeholder="user.firstName" required/>
         </div>
 
         <div class="form-group">
-            <input type="text" class="form-control" id="middleInitial" placeholder="M.I." required/>
+            <input type="text" class="form-control" id="middleInitial" placeholder="user.middleInitial" required/>
         </div>
 
         <div class="form-group">
-            <input type="text" class="form-control" id="lastName" placeholder="Last name" required/>
+            <input type="text" class="form-control" id="lastName" placeholder="user.lastName" required/>
         </div>
 
         <div class="form-group">
             <label for="homeAddress">Home address</label>
-            <input type="text" class="form-control" id="homeaddress" placeholder="Enter address" required/>
+            <input type="text" class="form-control" id="homeaddress" placeholder="user.homeAddress" required/>
         </div>
 
         <div class="form-group">
             <label for="city">City</label>
-            <input type="text" class="form-control" id="city" placeholder="Enter city" required/>
+            <input type="text" class="form-control" id="city" placeholder="user.city" required/>
         </div>
 
+        <!--Should be Selector-->
         <div class="form-group">
             <label for="state">State</label>
-            <input type="text" class="form-control" id="state" placeholder="Enter state" required/>
-        </div>
-
-        <div class="form-group">
-            <label for="state">State</label>
-            <input type="text" class="form-control" id="city" placeholder="Enter state" required/>
+            <input type="text" class="form-control" id="state" placeholder="user.state" required/>
         </div>
 
         <div class="form-group">
             <label for="zip">Zip</label>
-            <input type="text" class="form-control" id="zip" placeholder="Enter zip code" required/>
+            <input type="text" class="form-control" id="zip" placeholder="user.zip" required/>
         </div>
 
         <div class="form-group">
             <label for="country">Country</label>
-            <input type="text" class="form-control" id="country" placeholder="Enter count" required/>
+            <input type="text" class="form-control" id="country" placeholder="user.country" required/>
         </div>
 
         <div class="form-group">
             <label for="primaryPhone">Primary Phone Number</label>
-            <input type="text" class="form-control" id="primaryPhone" placeholder="###-###-####" required/>
+            <input type="tel" class="form-control" id="primaryPhone" placeholder="user.primaryPhone" required/>
         </div>
 
         <div class="form-group">
             <label for="secondaryPhone">Secondary Phone Number (optional)</label>
-            <input type="text" class="form-control" id="secondaryPhone" placeholder="###-###-####"/>
+            <input type="tel" class="form-control" id="secondaryPhone" placeholder="user.secondaryPhone"/>
         </div>
 
         <div class="form-group">
             <label for="fax">Fax Number (optional)</label>
-            <input type="text" class="form-control" id="fax" placeholder="###-###-####"/>
+            <input type="tel" class="form-control" id="fax" placeholder="user.fax"/>
         </div>
 
         <div class="form-group">
             <label for="company">Company</label>
-            <input type="text" class="form-control" id="company" placeholder="Enter company name" required/>
+            <input type="text" class="form-control" id="company" placeholder="user.company" required/>
         </div>
 
         <div class="form-group">
             <label for="branch">Branch/Office Location (optional)</label>
-            <input type="text" class="form-control" id="branch" placeholder="Enter branch or location"/>
+            <input type="text" class="form-control" id="branch" placeholder="user.branch"/>
         </div>
 
         <div class="form-group">
             <label for="notes">Additional information (optional)</label>
-            <input type="text" class="form-control" id="notes" placeholder="Enter any additional information"/>
+            <input type="text" class="form-control" id="notes" placeholder="user.notes"/>
         </div>
 
-        <button type="submit" class="btn btn-default">Submit</button>
+        <button type="submit" class="btn btn-default">{{user.action}}</button>
     </form>
 </div>
 
