--- a/Source/src/main/webapp/views/user/login.html
+++ b/Source/src/main/webapp/views/user/login.html
@@ -1,12 +1,24 @@
 
 <h1>{{ pageTitle }}</h1>
 <div>
-    <form>
-        <div class="form-group">
-            <label for="email">Email address</label>
-            <input type="email" class="form-control" placeholder="Enter email">
-        </div>
-
-        <button type="submit" class="btn btn-default">Login</button>
-    </form>
-</div>
+	<div id="main">
+		<div class="container">
+			<div ng-view>
+				<div class="container">
+					<a href="http://www.sogeti.com/"><img
+						src="http://www.sogeti.com/Static/img/logo.png" alt="Sogeti Logo" /></a>
+					<h1 class=text-center>EVENT MANAGEMENT SYSTEM</h1>
+					<form role="form">
+						<div class="form-group">
+							<label for="email">Email:</label> <input type="email"
+								class="form-control" id="email" placeholder="Enter email">
+						</div>
+						<div class="case-box-wrapper">
+							<a href="menu.html">
+								<div class="case-box">SUBMIT</div></a>
+						</div>
+					</form>
+				</div>
+			</div>
+		</div>
+	</div>
