--- a/Source/src/main/webapp/views/event/viewevent.html
+++ b/Source/src/main/webapp/views/event/viewevent.html
@@ -1,10 +1,55 @@
-<!DOCTYPE html>
-<html>
-<head lang="en">
-    <meta charset="UTF-8">
-    <title></title>
-</head>
-<body>
+<div>
+    <form ng-submit="updateEvent()">
+        <div class="form-group">
+            <label for="event.title">Event title</label>
+            <input type="text" class="form-control" id="event.title" placeholder="Enter event title" required/>
+        </div>
 
-</body>
-</html>
+        <!-- NOTE: need to make a field to upload logo/image -->
+
+        <div class="form-group">
+            <label for="event.location">Event location</label>
+            <input type="text" class="form-control" id="event.lcoation" placeholder="Enter event location" required/>
+        </div>
+
+
+        <div class="row">
+            <div class='col-sm-3'>
+                <div class="form-group">
+                    <div class='input-group date' id='event.startdate'>
+                        <input type='text' class="form-control" placeholder="Begin date" />
+                            <span class="input-group-addon"><span class="glyphicon glyphicon-calendar"></span>
+                            </span>
+                    </div>
+                </div>
+            </div>
+            <script type="text/javascript">
+                $(function () {
+                    $('#event.startdate').datetimepicker();
+                });
+            </script>
+
+            <div class='col-sm-3'>
+                <div class="form-group">
+                    <div class='input-group date' id='event.enddate'>
+                        <input type='text' class="form-control" placeholder="End date" />
+                            <span class="input-group-addon"><span class="glyphicon glyphicon-calendar"></span>
+                            </span>
+                    </div>
+                </div>
+            </div>
+            <script type="text/javascript">
+                $(function () {
+                    $('#event.enddate').datetimepicker();
+                });
+            </script>
+
+        </div>
+
+        a
+
+
+
+        <button type="submit" class="btn btn-default">Submit</button>
+    </form>
+</div>
