--- a/Source/src/main/webapp/views/event/viewevent.html
+++ b/Source/src/main/webapp/views/event/viewevent.html
@@ -9,7 +9,7 @@
 
         <div class="form-group">
             <label for="event.location">Event location</label>
-            <input type="text" class="form-control" id="event.lcoation" placeholder="Enter event location" required/>
+            <input type="text" class="form-control" id="event.location" placeholder="Enter event location" required/>
         </div>
 
 
@@ -46,9 +46,7 @@
 
         </div>
 
-        a
-
-
+<!-- TRY TO FIND WAY AROUND USING BUTTON -->
 
         <button type="submit" class="btn btn-default">Submit</button>
     </form>
