--- a/Source/src/main/webapp/views/user/profile.html
+++ b/Source/src/main/webapp/views/user/profile.html
@@ -18,7 +18,7 @@
 
 <div>
 	<form ng-submit="updateProfile()">
-		<table class="table table-condensed table-striped">
+		<table class="block table table-condensed table-striped">
 			<thead>
 				<tr>
 					<td><label for="email">Email address</label></td>
