--- a/Source/src/main/webapp/css/SogetiStyle.css
+++ b/Source/src/main/webapp/css/SogetiStyle.css
@@ -1,12 +1,55 @@
 /*
 *	Additions by Julie Rogers for New Hire Training Academy 2015 Capstone
 */
+  
+  table {
+	width: auto !important;
+}
 
-table.center {
-    width:70%; 
-    margin-left:0%; 
-    margin-right:0%;
+.myCenter {
+    margin-left: auto;
+    margin-right: auto;
+    width: auto;
+}
+
+@media {
+  .navbar-collapse {
+    width: auto;
+    border-top: 0;
+    box-shadow: none;
+    max-height: none;
+    padding-left:0;
+    padding-right:0;
   }
+  .navbar-collapse.collapse {
+    display: block !important;
+    width: auto !important;
+    padding-bottom: 0;
+    overflow: visible !important;
+  }
+  .navbar-collapse.in {
+    overflow-x: visible;
+  }
+
+.navbar
+{
+	max-width:190px;
+	margin-right: 0;
+	margin-left: 0;
+}	
+
+.navbar-nav,
+.navbar-nav > li,
+.navbar-left,
+.navbar-right,
+.navbar-header
+{float:none !important;}
+
+.navbar-right .dropdown-menu {left:0;right:auto;}
+.navbar-collapse .navbar-nav.navbar-right:last-child {
+    margin-right: 0;
+}
+}
   
 /*
 *	End of additions
