Editing login implementation

--- a/Source/src/main/webapp/views/user/login.html
+++ b/Source/src/main/webapp/views/user/login.html
@@ -5,8 +5,8 @@
 		<div class="container">
 
 				<div class="container">
-					<a href="http://www.sogeti.com/"><img
-						src="http://www.sogeti.com/Static/img/logo.png" alt="Sogeti Logo" /></a>
+					<a href="http://www.sogeti.com/">
+                        <img src="http://www.sogeti.com/Static/img/logo.png" alt="Sogeti Logo" /></a>
 					<h1 class=text-center>EVENT MANAGEMENT SYSTEM</h1>
 					<form role="form">
 						<div class="form-group">
