Added edit/new event views

--- a/Source/src/main/webapp/views/events/updateevent.html
+++ b/Source/src/main/webapp/views/events/updateevent.html
@@ -9,7 +9,7 @@
 
         <div class="form-group">
             <label for="event.location">Event location</label>
-            <input type="text" class="form-control" id="event.lcoation" placeholder="Enter event location" required/>
+            <input type="text" class="form-control" id="event.location" placeholder="Enter event location" required/>
         </div>
 
 
