--- a/Source/src/main/webapp/views/events/viewevent.html
+++ b/Source/src/main/webapp/views/events/viewevent.html
@@ -6,7 +6,7 @@
             <h3 class="panel-title">Event Name</h3>
         </div>
         <div class="panel-body">
-            {{event.name}}
+            {{event.title}}
         </div>
     </div>
 
