--- a/Source/src/main/webapp/views/user/login.html
+++ b/Source/src/main/webapp/views/user/login.html
@@ -1,6 +1,5 @@
 
-<h1>{{ pageTitle }}</h1>
-<div>
+<div class="col-md-offset-2">
 	<div id="main">
 
         <div class="container">
@@ -14,7 +13,7 @@
                     <div class="form-group">
 
                         <div class="row">
-                            <div class="col-md-11">
+                            <div>
 
                                 <input type="email" class="form-control" ng-model="email" id="email" placeholder="Enter email" required/>
                             </div>
