--- a/Source/src/main/webapp/views/user/profile.html
+++ b/Source/src/main/webapp/views/user/profile.html
@@ -1,110 +1,87 @@
-`````````````````````````````````````````````````````````````
-<!-- Requirements
-•	First name
-•	Middle initial
-•	Last name (required)
-•	Home Street Address (required)
-•	Home City, State, Postal Code, Country (required)
-•	Primary Phone Number (required)
-•	Secondary Phone Number (optional)
-•	FAX number (optional)
-•	Primary Email Address (required)
-•	Secondary Email Address (optional)
-•	Company Name (required)
-•	Branch Office/Location (optional)
-•	Additional Text Info (optional)
 
--->
-
+<!--
+//USER MODEL
+//{
+//    "firstName": "Tim",   --
+//    "lastName": "Kelley", --
+//    "email": "tkelley@email.com", --
+//    "password" : "password",
+//    "address1" : "address1",
+//    "address2" : "address2",
+//    "city" : "city",
+//    "state" : "state",
+//    "companyName" : "companyName",
+//    "branchLocation" : "branchLocation",
+//    "additionalInfo" : "addtionalInfo",
+//    "zip" : "12345",
+//    "phoneHome" : "134235",
+//    "phoneOffice" : "134235",
+//    "phoneCell" : "134235"
+//}-->
 <div>
-	<form ng-submit="updateProfile()">
-		<table class="block table table-condensed table-striped">
-			<thead>
-				<tr>
-					<td><label for="email">Email address</label></td>
-					<td><input type="email" class="form-control" id="email"
-						placeholder="user.email || Email" required {{user.emailReadOnly}}/></td>
-				</tr>
-			</thead>
-			<tbody>
-				<tr>
-					<td><label for="firstName">Name</label></td>
-					<td><input type="text" class="form-control" id="firstName"
-						placeholder="user.firstName" required /></td>
-				</tr>
-				<tr>
-					<td><label for="firstName">Middle Initial (Optional)</label></td>
-					<td><input type="text" class="form-control" id="middleInitial"
-						placeholder="user.middleInitial" required /></td>
-				</tr>
-				<tr>
-					<td><label for="firstName">Last Name</label></td>
-					<td><input type="text" class="form-control" id="lastName"
-						placeholder="user.lastName" required /></td>
-				</tr>
-				<tr>
-					<td><label for="homeAddress">Home address</label></td>
-					<td><input type="text" class="form-control" id="homeaddress"
-						placeholder="user.homeAddress" required /></td>
-				</tr>
-				<tr>
-					<td><label for="city">City</label></td>
-					<td><input type="text" class="form-control" id="city"
-						placeholder="user.city" required /></td>
-				</tr>
-				<tr>
-					<td><label for="state">State</label></td>
-					<td><input type="text" class="form-control" id="state"
-						placeholder="user.state" required /></td>
-				</tr>
-				<tr>
-					<td><label for="zip">Zip</label></td>
-					<td><input type="text" class="form-control" id="zip"
-						placeholder="user.zip" required /></td>
-				</tr>
-				<tr>
-					<td><label for="country">Country</label></td>
-					<td><input type="text" class="form-control" id="country"
-						placeholder="user.country" required /></td>
-				</tr>
-				<tr>
-					<td><label for="primaryPhone">Primary Phone Number</label></td>
-					<td><input type="tel" class="form-control" id="primaryPhone"
-						placeholder="user.primaryPhone" required /></td>
-				</tr>
-				<tr>
-					<td><label for="secondaryPhone">Secondary Phone Number
-							(optional)</label></td>
-					<td><input type="tel" class="form-control" id="secondaryPhone"
-						placeholder="user.secondaryPhone" /></td>
-				</tr>
-				<tr>
-					<td><label for="fax">Fax Number (optional)</label></td>
-					<td><input type="tel" class="form-control" id="fax"
-						placeholder="user.fax" /></td>
-				</tr>
-				<tr>
-					<td><label for="company">Company</label></td>
-					<td><input type="text" class="form-control" id="company"
-						placeholder="user.company" required /></td>
-				</tr>
-				<tr>
-					<td><label for="branch">Branch/Office Location
-							(optional)</label></td>
-					<td><input type="text" class="form-control" id="branch"
-						placeholder="user.branch" /></td>
-				</tr>
-				<tr>
-					<td><label for="notes">Additional information
-							(optional)</label></td>
-					<td><input type="text" class="form-control" id="notes"
-						placeholder="user.notes" /></td>
-				</tr>
-			</tbody>
-		</table>
+    <form ng-submit="submitRegistration()">
+        <table class="block table table-condensed table-striped">
+            <thead>
+            <tr>
+                <td><label for="email">Email address</label></td>
+                <td><input type="email" class="form-control" id="email" placeholder="Email" required ng-model="user.email" /></td>
+            </tr>
+            </thead>
+            <tbody>
+            <tr>
+                <td><label for="firstName">Name</label></td>
+                <td><input type="text" class="form-control" id="firstName" placeholder="First Name" required ng-model="user.firstName"/></td>
+            </tr>
 
-		<div class="case-box-wrapper">
-			<a href="menu.html">
-				<div class="case-box">SUBMIT</div>
-			</a>
-		</div>
+            <tr>
+                <td><label for="firstName">Last Name</label></td>
+                <td><input type="text" class="form-control" id="lastName" placeholder="Last Name" ng-model="user.lastName" required /></td>
+            </tr>
+            <tr>
+                <td><label for="homeAddress">Home address</label></td>
+                <td><input type="text" class="form-control" id="homeaddress" placeholder="Street Address" ng-model="user.address1" required /></td>
+            </tr>
+            <tr>
+                <td><label for="homeAddress">Home address</label></td>
+                <td><input type="text" class="form-control" id="address2" placeholder="Street Address" ng-model="user.address2" /></td>
+            </tr>
+            <tr>
+                <td><label for="city">City</label></td>
+                <td><input type="text" class="form-control" id="city" placeholder="City" ng-model="user.city" required /></td>
+            </tr>
+            <tr>
+                <td><label for="state">State</label></td>
+                <td><input type="text" class="form-control" id="state" placeholder="State" ng-model="user.state" required /></td>
+            </tr>
+            <tr>
+                <td><label for="zip">Zip</label></td>
+                <td><input type="text" class="form-control" id="zip" placeholder="Zip" ng-model="user.zip" required /></td>
+            </tr>
+
+            <tr>
+                <td><label for="primaryPhone">Primary Phone Number</label></td>
+                <td><input type="tel" class="form-control" id="primaryPhone" placeholder="Home Phone" ng-model="user.phoneHome" required /></td>
+            </tr>
+            <tr>
+                <td><label for="secondaryPhone">Secondary Phone Number
+                    (optional)</label></td>
+                <td><input type="tel" class="form-control" id="secondaryPhone" placeholder="Cell Phone" ng-model="user.phoneCell" /></td>
+            </tr>
+
+            <tr>
+                <td><label for="company">Company</label></td>
+                <td><input type="text" class="form-control" id="company"  placeholder="Company" ng-model="user.companyName" required /></td>
+            </tr>
+            <tr>
+                <td><label for="branch">Branch/Office Location </label></td>
+                <td><input type="text" class="form-control" id="branch" ng-model="user.branchLocation"  placeholder="Branch Location" /></td>
+            </tr>
+            </tbody>
+
+        </table>
+        <button type="submit" class="case-box btn">Submit</button>
+        <!--<div class="case-box-wrapper">-->
+                <!--<div class="case-box btn">SUBMIT</div>-->
+        <!--</div>-->
+        </form>
+    </div>
