Feature complete edit/update event

--- a/Source/src/main/webapp/views/events/updateevent.html
+++ b/Source/src/main/webapp/views/events/updateevent.html
@@ -1,11 +1,12 @@
+
+<!-- Use editevent.html instead
 <div>
     <form ng-submit="updateEvent()">
         <div class="form-group">
             <label for="event.title">Event title</label>
-            <input type="text" class="form-control" id="event.title" placeholder="Enter event title" required/>
+            <input type="text" class="form-control" id="event.title" placeholder="Enter event title" ng-model="event.title" required/>
         </div>
 
-        <!-- NOTE: need to make a field to upload logo/image -->
 
         <div class="form-group">
             <label for="event.location">Event location</label>
@@ -53,3 +54,4 @@
 <button type="submit" class="btn btn-default">Submit</button>
 </form>
 </div>
+-->
