--- a/Source/src/main/webapp/views/events/editevent.html
+++ b/Source/src/main/webapp/views/events/editevent.html
@@ -1,22 +1,31 @@
+<div class="panel panel-primary">
+    <!-- Default panel contents -->
+    <div class="panel-heading">{{mainPanelTitle}}</div>
 
-<div>
+    <div class="panel-body">
     <form ng-submit="updateEvent()">
+        <ul class="list-group">
         <div class="form-group">
             <label for="event.title">Event title</label>
-            <input type="text" class="form-control" id="event.title" placeholder="Enter event title" required/>
+            <input type="text" class="form-control" id="event.title" placeholder="Enter event title" ng-model="event.title" required/>
+        </div>
 
+        <div class="form-group">
+            <label for="event.description">Event description</label>
+            <input type="text" class="form-control" id="event.description" placeholder="Enter event description" ng-model="event.description" required/>
+        </div>
 
         <div class="form-group">
             <label for="event.location">Event location</label>
-            <input type="text" class="form-control" id="event.location" placeholder="Enter event location" required/>
+            <input type="text" class="form-control" id="event.location" placeholder="Enter event location" ng-model="event.location" required/>
         </div>
 
 
         <div class="row">
             <div class='col-sm-3'>
                 <div class="form-group">
-                    <div class='input-group date' id='event.startdate'>
-                        <input type='text' class="form-control" placeholder="Begin date" />
+                    <div class='input-group date' id='startDatePicker'>
+                        <input type='text' class="form-control" placeholder="Begin date" ng-model="event.startdate" />
                             <span class="input-group-addon"><span class="glyphicon glyphicon-calendar"></span>
                             </span>
                     </div>
@@ -24,14 +33,14 @@
             </div>
             <script type="text/javascript">
                 $(function () {
-                    $('#event.startdate').datetimepicker();
+                    $('#startDatePicker').datetimepicker();
                 });
             </script>
 
             <div class='col-sm-3'>
                 <div class="form-group">
                     <div class='input-group date' id='event.enddate'>
-                        <input type='text' class="form-control" placeholder="End date" />
+                        <input type='text' class="form-control" placeholder="End date" ng-model="event.enddate" />
                             <span class="input-group-addon"><span class="glyphicon glyphicon-calendar"></span>
                             </span>
                     </div>
@@ -45,7 +54,19 @@
 
         </div>
 
+        <div class="form-group">
+            <label for="event.category">Event category</label>
+            <input type="text" class="form-control" id="event.category" placeholder="Enter event category" ng-model="event.category" required/>
+        </div>
 
-        <button type="submit" class="btn btn-default">Submit</button>
+        <div class="form-group">
+            <label for="event.type">Event type</label>
+            <input type="text" class="form-control" id="event.type" placeholder="Enter event type" ng-model="event.type" required/>
+        </div>
+
+
+        <button type="submit" class="btn btn-primary">Submit</button>
+
     </form>
+        </div>
 </div>
