Tweaking some visuals in index

--- a/Source/src/main/webapp/views/user/login.html
+++ b/Source/src/main/webapp/views/user/login.html
@@ -1,29 +1,19 @@
 
-<div class="col-md-offset-2">
+
 	<div id="main">
-
-        <div class="container">
-            <h1 class=text-center>EVENT MANAGEMENT SYSTEM</h1>
-        </div>
-
         <div class="panel panel-default">
-            <div class="panel-heading">Login</div>
+            <div class="panel-heading">Provide your email</div>
             <div class="panel-body">
                 <form role="form" ng-submit="login()">
                     <div class="form-group">
-
-                        <div class="row">
                             <div>
-
                                 <input type="email" class="form-control" ng-model="email" id="email" placeholder="Enter email" required/>
                             </div>
                             <div class="col-md-1">
-                                <button type="submit" class="btn btn-primary">Submit</button>
+                                <button type="submit" class="btn-primary">Submit</button>
                             </div>
-                        </div>
                     </div>
                 </form>
             </div>
         </div>
 	</div>
-</div>
