--- a/Source/src/main/webapp/views/events/editevent.html
+++ b/Source/src/main/webapp/views/events/editevent.html
@@ -1,6 +1,6 @@
-<div class="panel panel-primary">
+<div class="panel panel-primary myPanel">
     <!-- Default panel contents -->
-    <div class="panel-heading">{{mainPanelTitle}}</div>
+    <div class="panel-heading myPanelHeading">{{mainPanelTitle}}</div>
 
     <div class="panel-body">
         <form ng-submit="updateEvent()">
@@ -65,7 +65,7 @@
                 </div>
 
 
-                <button type="submit" class="btn btn-primary">Submit</button>
+                <button type="submit" class="btn">Submit</button>
 
         </form>
     </div>
