--- a/Source/src/main/webapp/views/user/login.html
+++ b/Source/src/main/webapp/views/user/login.html
@@ -1,8 +1,8 @@
 
 
 	<div id="main">
-        <div class="panel panel-default">
-            <div class="panel-heading">Provide your email</div>
+        <div class="panel panel-default myPanel">
+            <div class="panel-heading myPanelHeading">Provide your email</div>
             <div class="panel-body">
                 <form role="form" ng-submit="login()">
                     <div class="form-group">
