Added profile edit and merged registration into profile edit screen

--- a/Source/src/main/webapp/views/user/updateprofile.html
+++ b/Source/src/main/webapp/views/user/updateprofile.html
@@ -23,7 +23,7 @@
 				<tr>
 					<td><label for="email">Email address</label></td>
 					<td><input type="email" class="form-control" id="email"
-						placeholder="user.email || Email" required {{user.emailReadOnly}}/></td>
+						placeholder="user.email || Email" required {{emailReadOnly}}/></td>
 				</tr>
 			</thead>
 			<tbody>
