Added functionality to view and update profile

--- a/Source/src/main/webapp/views/user/viewprofile.html
+++ b/Source/src/main/webapp/views/user/viewprofile.html
@@ -18,9 +18,9 @@
 
 <div class="panel panel-primary">
     <div class="panel-heading">User Profile</div>
-    <div class="panel-body">
-        Panel content
-    </div>
+    <!--<div class="panel-body">-->
+        <!--Panel content-->
+    <!--</div>-->
 
     <table class="table table-striped">
         <!--<thead></thead>-->
