--- a/Source/src/main/webapp/views/user/updateprofile.html
+++ b/Source/src/main/webapp/views/user/updateprofile.html
@@ -1,4 +1,4 @@
-`````````````````````````````````````````````````````````````
+
 <!-- Requirements
 •	First name
 •	Middle initial
@@ -16,97 +16,120 @@
 
 -->
 
-<div>
-	<form ng-submit="updateProfile()">
-		<table class="block table table-condensed table-striped">
-			<thead>
-				<tr>
-					<td><label for="email">Email address</label></td>
-					<td><input type="email" class="form-control" id="email"
-						placeholder="user.email || Email" required {{emailReadOnly}}/></td>
-				</tr>
-			</thead>
-			<tbody>
-				<tr>
-					<td><label for="firstName">Name</label></td>
-					<td><input type="text" class="form-control" id="firstName"
-						placeholder="user.firstName" required /></td>
-				</tr>
-				<tr>
-					<td><label for="firstName">Middle Initial (Optional)</label></td>
-					<td><input type="text" class="form-control" id="middleInitial"
-						placeholder="user.middleInitial" required /></td>
-				</tr>
-				<tr>
-					<td><label for="firstName">Last Name</label></td>
-					<td><input type="text" class="form-control" id="lastName"
-						placeholder="user.lastName" required /></td>
-				</tr>
-				<tr>
-					<td><label for="homeAddress">Home address</label></td>
-					<td><input type="text" class="form-control" id="homeaddress"
-						placeholder="user.homeAddress" required /></td>
-				</tr>
-				<tr>
-					<td><label for="city">City</label></td>
-					<td><input type="text" class="form-control" id="city"
-						placeholder="user.city" required /></td>
-				</tr>
-				<tr>
-					<td><label for="state">State</label></td>
-					<td><input type="text" class="form-control" id="state"
-						placeholder="user.state" required /></td>
-				</tr>
-				<tr>
-					<td><label for="zip">Zip</label></td>
-					<td><input type="text" class="form-control" id="zip"
-						placeholder="user.zip" required /></td>
-				</tr>
-				<tr>
-					<td><label for="country">Country</label></td>
-					<td><input type="text" class="form-control" id="country"
-						placeholder="user.country" required /></td>
-				</tr>
-				<tr>
-					<td><label for="primaryPhone">Primary Phone Number</label></td>
-					<td><input type="tel" class="form-control" id="primaryPhone"
-						placeholder="user.primaryPhone" required /></td>
-				</tr>
-				<tr>
-					<td><label for="secondaryPhone">Secondary Phone Number
-							(optional)</label></td>
-					<td><input type="tel" class="form-control" id="secondaryPhone"
-						placeholder="user.secondaryPhone" /></td>
-				</tr>
-				<tr>
-					<td><label for="fax">Fax Number (optional)</label></td>
-					<td><input type="tel" class="form-control" id="fax"
-						placeholder="user.fax" /></td>
-				</tr>
-				<tr>
-					<td><label for="company">Company</label></td>
-					<td><input type="text" class="form-control" id="company"
-						placeholder="user.company" required /></td>
-				</tr>
-				<tr>
-					<td><label for="branch">Branch/Office Location
-							(optional)</label></td>
-					<td><input type="text" class="form-control" id="branch"
-						placeholder="user.branch" /></td>
-				</tr>
-				<tr>
-					<td><label for="notes">Additional information
-							(optional)</label></td>
-					<td><input type="text" class="form-control" id="notes"
-						placeholder="user.notes" /></td>
-				</tr>
-			</tbody>
-		</table>
+<div class="panel panel-primary">
+    <div class="panel-heading">{{pageConfig.panelTitle}}</div>
 
-		<div class="case-box-wrapper">
-			<a href="menu.html">
-				<div class="case-box">SUBMIT</div>
-			</a>
-		</div>
-        </form>
-    </div>
+    <form ng-submit="updateProfile()">
+        <table class="block table table-condensed table-striped">
+            <thead></thead>
+
+
+            <tbody>
+
+            <tr>
+                <td><label for="email">Email address</label></td>
+                <td><input type="email" class="form-control" id="email"
+                           placeholder="Enter email" required {{pageConfig.emailReadOnly}} value="{{user.email}}"/></td>
+            </tr>
+            <tr>
+                <td><label for="firstName">First Name</label></td>
+                <td><input type="text" class="form-control" id="firstName"
+                           placeholder="Enter first name" required value="{{user.firstName}}" /></td>
+            </tr>
+
+            <tr>
+                <td><label for="lastName">Last Name</label></td>
+                <td><input type="text" class="form-control" id="lastName"
+                           placeholder="Enter last name" required value="{{user.lastName}}"/></td>
+            </tr>
+            <tr>
+                <td><label for="homeAddress">Home address</label></td>
+                <td><input type="text" class="form-control" id="homeAddress"
+                           placeholder="Enter home address" required value="{{user.homeAddress}}" /></td>
+            </tr>
+            <tr>
+                <td><label for="city">City</label></td>
+                <td><input type="text" class="form-control" id="city"
+                           placeholder="Enter City" required value="{{user.city}}" />
+                </td>
+            </tr>
+            <tr>
+                <td><label for="state">State</label></td>
+                <td><input type="text" class="form-control" id="state"
+                           placeholder="Enter state" required value="{{user.state}}" />
+                </td>
+            </tr>
+
+            <tr>
+                <td><label for="zip">Zip Code</label></td>
+                <td><input type="text" class="form-control" id="zip"
+                           placeholder="Enter Zip Code" required value="{{user.zip}}" />
+                </td>
+            </tr>
+            <!--<tr>-->
+
+                <!-- Single button -->
+                <!--<div class="btn-group">-->
+                    <!--<button type="button" class="btn btn-primary btn-block dropdown-toggle" data-toggle="dropdown" aria-expanded="false">-->
+                        <!--Action <span class="caret"></span>-->
+                    <!--</button>-->
+                    <!--<ul class="dropdown-menu" role="menu">-->
+                        <!--<li><a href="#">Action</a></li>-->
+                        <!--<li><a href="#">Another action</a></li>-->
+                        <!--<li><a href="#">Something else here</a></li>-->
+                        <!--<li class="divider"></li>-->
+                        <!--<li><a href="#">Separated link</a></li>-->
+                    <!--</ul>-->
+                <!--</div>-->
+                <!--<td><label for="state">State</label></td>-->
+                <!--<td><input type="text" class="form-control" id="state"-->
+                           <!--placeholder="" required /></td>-->
+                </td>
+            </tr>
+
+
+            <tr>
+                <td><label for="country">Country</label></td>
+                <td><input type="text" class="form-control" id="country"
+                           placeholder="Enter country" required value="{{user.country}}" />
+                </td>
+            </tr>
+
+            <tr>
+                <td><label for="primaryPhone">Primary Phone Number</label></td>
+                <td><input type="tel" class="form-control" id="primaryPhone"
+                           placeholder="(###) ###-####" required value="{{user.primaryPhone}}" /></td>
+            </tr>
+
+            <tr>
+                <td><label for="secondaryPhone">Secondary Phone Number
+                    (optional)</label></td>
+                <td><input type="tel" class="form-control" id="secondaryPhone"
+                           placeholder="(###) ###-####" value="{{user.secondaryPhone}}" /></td>
+            </tr>
+
+            <tr>
+                <td><label for="company">Company</label></td>
+                <td><input type="text" class="form-control" id="company"
+                           placeholder="Enter your company name" required value="{{user.company}}" /></td>
+            </tr>
+            <tr>
+                <td><label for="branch">Branch/Office Location
+                    (optional)</label></td>
+                <td><input type="text" class="form-control" id="branch"
+                           placeholder="Branch Location" value="{{user.branch}}"/></td>
+            </tr>
+            <tr>
+                <td><label for="notes">Additional information
+                    (optional)</label></td>
+                <td><input type="text" class="form-control" id="notes"
+                           placeholder="What else do we need to know?" value="{{user.info}}"/></td>
+            </tr>
+            </tbody>
+        </table>
+<div class="panel-footer">
+    <button type="submit" class="btn btn-default">Save</button>
+</div>
+
+    </form>
+</div>
