I'm  so fancy, you already know.

--- a/Source/src/main/webapp/views/events/editevent.html
+++ b/Source/src/main/webapp/views/events/editevent.html
@@ -1,3 +1,4 @@
+<h1>My Event</h1>
 <div class="panel panel-primary myPanel">
     <!-- Default panel contents -->
     <div class="panel-heading myPanelHeading">{{mainPanelTitle}}</div>
