--- a/Source/src/main/webapp/views/events/viewevent.html
+++ b/Source/src/main/webapp/views/events/viewevent.html
@@ -1,6 +1,8 @@
-<div>
-    <div class="panel panel-default myPanel">
-        <div class="panel-heading myPanelHeading">Your Event</div>
+
+<div class="col-sm-8 col-sm-offset-2">
+    <h1>My Event</h1>
+    <div class="panel panel-default myPanel ">
+        <div class="panel-heading myPanelHeading">{{event.title}}</div>
         <table class="table table-striped">
             <tbody>
             <!-- Event Name Section -->
