--- a/Source/src/main/webapp/views/user/login.html
+++ b/Source/src/main/webapp/views/user/login.html
@@ -1,19 +1,18 @@
-
-
-	<div id="main">
-        <div class="panel panel-default myPanel">
-            <div class="panel-heading myPanelHeading">Provide your email</div>
-            <div class="panel-body">
-                <form role="form" ng-submit="login()">
-                    <div class="form-group">
-                            <div>
-                                <input type="email" class="form-control" ng-model="email" id="email" placeholder="Enter email" required/>
-                            </div>
-                            <div class="col-md-1">
-                                <button type="submit" class="btn-primary">Submit</button>
-                            </div>
+<div id="main" class="col-sm-8 col-sm-offset-2">
+    <h1>Login</h1>
+    <div class="panel panel-default myPanel">
+        <div class="panel-heading myPanelHeading">Provide your email</div>
+        <div class="panel-body">
+            <form role="form" ng-submit="login()">
+                <div class="form-group">
+                    <div>
+                        <input type="email" class="form-control" ng-model="email" id="email" placeholder="Enter email" required/>
                     </div>
-                </form>
-            </div>
+                    <div class="col-md-1">
+                        <button type="submit" class="btn-primary">Submit</button>
+                    </div>
+                </div>
+            </form>
         </div>
-	</div>
+    </div>
+</div>
