Fixed a few layout issues

--- a/Source/src/main/webapp/views/events/editevent.html
+++ b/Source/src/main/webapp/views/events/editevent.html
@@ -1,4 +1,4 @@
-
+<h1></h1>
 <div class="panel panel-primary myPanel">
     <div class="panel-heading myPanelHeading">{{mainPanelTitle}}</div>
 
@@ -25,12 +25,12 @@
             </tr>
 
 
-            <!--<tr class="form-group">-->
-                <!--<td><label>Event start</label></td>-->
-                <!--<td>-->
+            <tr class="form-group">
+                <td><label>Event start</label></td>
+                <td>
                     <!--<div class="form-group">-->
                         <!--<div class='input-group date' id='startDatePicker'>-->
-                            <!--<input type='text' class="form-control" placeholder="Begin date" ng-model="event.startdate" />-->
+                            <input type='text' class="form-control" placeholder="Begin date" ng-model="event.startdate" />
                             <!--<span class="input-group-addon"><span class="glyphicon glyphicon-calendar"></span>-->
                             <!--</span>-->
                         <!--</div>-->
@@ -40,16 +40,16 @@
                             <!--$('#startDatePicker').datetimepicker();-->
                         <!--});-->
                     <!--</script>-->
-                <!--</td>-->
+                </td>
 
-            <!--</tr>-->
+            </tr>
 
-            <!--<tr class="form-group">-->
-                <!--<td><label>Event end</label></td>-->
-                <!--<td>-->
+            <tr class="form-group">
+                <td><label>Event end</label></td>
+                <td>
                     <!--<div class="form-group">-->
                         <!--<div class='input-group date' id='event.enddate'>-->
-                            <!--<input type='text' class="form-control" placeholder="End date" ng-model="event.enddate" />-->
+                            <input type='text' class="form-control" placeholder="End date" ng-model="event.enddate" />
                             <!--<span class="input-group-addon"><span class="glyphicon glyphicon-calendar"></span>-->
                             <!--</span>-->
                         <!--</div>-->
@@ -59,10 +59,8 @@
                             <!--$('#event.enddate').datetimepicker();-->
                         <!--});-->
                     <!--</script>-->
-                <!--</td>-->
-
-
-            <!--</tr>-->
+                </td>
+            </tr>
 
             <tr class="form-group">
                 <td><label for="event.category">Event category</label></td>
