--- a/Source/src/main/webapp/views/user/viewprofile.html
+++ b/Source/src/main/webapp/views/user/viewprofile.html
@@ -15,9 +15,9 @@
 •	Additional Text Info (optional)
 
 -->
-
-<div class="panel panel-primary">
-    <div class="panel-heading">User Profile</div>
+<h1></h1>
+<div class="panel panel-primary myPanel">
+    <div class="panel-heading myPanelHeading">User Profile</div>
     <!--<div class="panel-body">-->
         <!--Panel content-->
     <!--</div>-->
